# picacomic-downloader

./: LICENSE  README.md  auto-imports.d.ts  components.d.ts  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: Publish.yml
src/: App.vue  AppContent.vue  bindings.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  download_manager.rs  events.rs  export.rs  extensions.rs  lib.rs  logger.rs  main.rs  pica_client.rs  responses.rs  types.rs  utils.rs
src-tauri/src/responses/: get_chapter_image_resp_data.rs  get_chapter_resp_data.rs  get_comic_resp_data.rs  get_favorite_resp_data.rs  get_rank_resp_data.rs  login_resp_data.rs  mod.rs  search_resp_data.rs  user_profile_resp_data.rs
src-tauri/src/types/: chapter_info.rs  comic.rs  comic_info.rs  downloaded_format.rs  get_favorite_result.rs  get_favorite_sort.rs  get_rank_result.rs  get_rank_type.rs  mod.rs  search_result.rs  search_sort.rs
src/components/: ComicCard.vue  CompletedProgresses.vue  DownloadAllFavoriteButton.vue  DownloadedComicCard.vue  DownloadingList.vue  EpisodePane.vue  FavoritePane.vue  FavouritePane.vue  Greet.vue  IconButton.vue  LoginDialog.vue  SearchPane.vue  SearchResult.vue  SettingsDialog.vue  UncompletedProgresses.vue
src/dialogs/: AboutDialog.vue  LoginDialog.vue  SettingsDialog.vue
src/panes/: ChapterPane.vue  DownloadedPane.vue  DownloadingPane.vue  FavoritePane.vue  RankPane.vue  SearchPane.vue
src/panes/DownloadPane/: DownloadedPane.vue
src/panes/DownloadPane/components/: DownloadedComicCard.vue  UpdateDownloadedComicsButton.vue
src/panes/ProgressesPane/: ProgressesPane.vue
src/panes/ProgressesPane/components/: CompletedProgresses.vue  ExportProgresses.vue  UncompletedProgresses.vue
